--- a/First_DeepLearning_GPU_Project.ipynb
+++ b/First_DeepLearning_GPU_Project.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/bedozzzzz/ZEUS/blob/master/First_DeepLearning_GPU_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/bedozzzzz/DeepLearning/blob/master/First_DeepLearning_GPU_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,7 +32,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 55
         },
         "outputId": "7476cce9-93df-4fb1-b1f8-70b675a9c744"
       },
@@ -65,9 +65,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "01c30828-6b6c-419a-c1ed-a6e425f3a8cb"
+        "outputId": "5467edfa-f38e-44d5-8aac-b64623fa7e39"
       },
       "cell_type": "code",
       "source": [
@@ -84,25 +84,45 @@
         "back_to_numpy+=1 #the changes also alter b --> coz back_to_numpy is alias for b tensor but with numpy array type \n",
         "d=pd.Series([0.1,0.2,0.3,0.4])\n",
         "type(d.values) #--> numpy.ndarray\n",
-        "e=torch.from_numpy(d.values)  --> #for ndarray to torch.tensor\n",
+        "e=torch.from_numpy(d.values)  #--> from ndarray to torch.tensor\n",
+        "e[0]=1.1 #indexing \n",
+        "e # tensor([1.1,0.2...])\n",
+        "ee=e[1:2] # up to but not including\n",
+        "e[0:3]=torch.tensor([5.5,5.3,4.2])\n",
+        "a+b  # arithmatic on tensors ( must be the same size (element by element)) casting int+float -> float # tensor+ndaraay\n",
+        "b*2 # tensor*scalar\n",
+        "a*b # hadamard product ( element by element) . ndaraay*tensor , tensor*tensor\n",
+        "type(a*b) # --> torch tensor\n",
+        "a=torch.from_numpy(a)\n",
+        "dot_product=torch.dot(a,b)  # --> tensor(55., dtype=torch.float65) (1-D torch)\n",
+        "concate=torch.cat((a,b)) # concatenating 2 tensors\n",
+        "e=torch.cat((e,torch.tensor([1.0],dtype=torch.float64))) # appending only vaild for same type tensors\n",
+        "ee=torch.tensor([1,2,3,4,5])\n",
+        "#eee=torch.cat([ee,e]) >>> error , not the same type\n",
+        "e.mean() # -> tensor(3.280 , dtype=torch.float64)\n",
+        "e.max()\n",
+        "\n",
+        " \n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
         " \n"
       ],
-      "execution_count": 54,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "numpy.ndarray"
+              "tensor(5.5000, dtype=torch.float64)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 125
         }
       ]
     },
@@ -114,7 +134,7 @@
       },
       "cell_type": "code",
       "source": [
-        " "
+        "  "
       ],
       "execution_count": 0,
       "outputs": []
